Made the header have a two-column grid, displayed average grade in badge

--- a/style.css
+++ b/style.css
@@ -1,17 +1,13 @@
-.table thead th {
-  border-top: 2px solid black;
-  border-bottom: none;
+header {
+  margin: 30px 0;
+  padding: 20px 0;
 }
 
-.table-secondary th, td {
-  border-left: 2px solid black;
-  border-right: 2px solid black;
+.row {
+  display: flex;
+  align-items: baseline;
 }
 
-tbody tr:last-child {
-  border-bottom: 2px solid black;
-}
-
-h1 {
-  margin: 20px 0;
+.average h2 {
+  text-align: right;
 }
