--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header {
-  margin: 30px 0;
-  padding: 20px 0;
+  margin: 20px 0;
+  padding-top: 30px;
 }
 
 .row {
@@ -10,4 +10,8 @@ header {
 
 .average h2 {
   text-align: right;
+}
+
+.table thead th {
+  padding-top: 30px;
 }
